# woowoo-language-server

./: .gitignore  .gitlab-ci.yml  .gitmodules  README.md  completer.py  constants.py  convertors.py  folder.py  highlighter.py  hoverer.py  linter.py  meta_context.py  navigator.py  parser.py  pyproject.toml  server.py  setup.py  templatedwoowoodocument.py  tree_utils.py  utils.py  woowoo_language_server.py  woowoodocument.py
.github/workflows/: wheels.yml
components/: completer.py  folder.py  highlighter.py  hoverer.py  linter.py  navigator.py
dialects/: fit_math.yaml
queries/: highlights.scm  yaml-highlights.scm
template/: fit_math.yaml
template_manager/: document_part.py  field.py  inner_environment.py  meta_block.py  outer_environment.py  reference.py  shorthand.py  template.py  template_manager.py  tmp.py  wobject.py
template_sandbox/: fit_math.yaml  sablona.md
templates/: fit_math.yaml  sablona.md
tests/: test_basic.py
tree-sitter/tree-sitter-woowoo/: .gitignore  README.md  binding.gyp  grammar.js  package-lock.json  package.json
tree-sitter/tree-sitter-woowoo/corpus/block/: multiple_blocks.txt
tree-sitter/tree-sitter-woowoo/corpus/block/meta_block/: end_of_block_in_the_middle_of_an_object.txt  non_trivial.txt
tree-sitter/tree-sitter-woowoo/corpus/comments/: complex.txt  docparts_no_meta.txt  end_of_the_file.txt  start_of_the_file.txt  table.txt  text_vs_comments.txt
tree-sitter/tree-sitter-woowoo/corpus/document_part/: docparts_no_meta.txt  empty_docpart.txt  multiple_parts.txt
tree-sitter/tree-sitter-woowoo/corpus/inner_environment/: inner_env_nested2.txt
tree-sitter/tree-sitter-woowoo/corpus/inner_environment/meta/: classic_meta.txt  dot_but_not_meta.txt  more_metas.txt
tree-sitter/tree-sitter-woowoo/corpus/inner_environment/short-form/: not_short_inner.txt  simple_in_text.txt
tree-sitter/tree-sitter-woowoo/corpus/inner_environment/shorthands/: delimiter_#.txt  delimiter_@.txt  nested_shorthand.txt
tree-sitter/tree-sitter-woowoo/corpus/newline/: CRLF.txt  LF.txt
tree-sitter/tree-sitter-woowoo/corpus/object/: object_with_implicit_last.txt  object_with_text_block_no_empty_last_line.txt  object_with_three_blocks.txt  simple.txt  two_objects.txt
tree-sitter/tree-sitter-woowoo/corpus/other/: multispace.txt
tree-sitter/tree-sitter-woowoo/corpus/outer_environment/: outer_env_simple.txt  outer_simple_but_long.txt
tree-sitter/tree-sitter-woowoo/corpus/outer_environment/fragile/: fragile_inside_classics.txt  fragile_with_indent_like.txt  simple.txt  spaces_beginning.txt
tree-sitter/tree-sitter-woowoo/corpus/outer_environment/implicit/: ending_on_last_line.txt  implicit_after_meta.txt  implicit_recognition.txt  nested_implicits.txt  only_implicits.txt
tree-sitter/tree-sitter-woowoo/corpus/outer_environment/nesting/: complex.txt  more_blocks.txt  table.txt
tree-sitter/tree-sitter-woowoo/queries/: highlights.scm
tree-sitter/tree-sitter-woowoo/src/: grammar.json  node-types.json  parser.c  scanner.cc
tree-sitter/tree-sitter-yaml/: README.md  package.json
wuff/: Bindings.cpp  CMakeLists.txt  Parser.cpp  Parser.h  WooWooAnalyzer.cpp  WooWooAnalyzer.h  WooWooDocument.cpp  WooWooDocument.h
wuff/components/: Completer.cpp  Completer.h  Component.cpp  Folder.cpp  Folder.h  Highlighter.cpp  Highlighter.h  Hoverer.cpp  Hoverer.h  Linter.cpp  Linter.h  Navigator.cpp  Navigator.h
wuff/dialect/: DialectManager.cpp  DialectManager.h  Field.cpp  Field.h  InnerEnvironment.cpp  Wobject.h
wuff/document/: CommentLine.h  DialectedWooWooDocument.cpp  DialectedWooWooDocument.h  MetaContext.cpp  MetaContext.h  UTF8toUTF16Mapping.cpp  UTF8toUTF16Mapping.h  WooWooDocument.cpp  WooWooDocument.h
wuff/lsp/: LSPTypes.h
wuff/parser/: MetaContext.h  Parser.cpp  Parser.h
wuff/template/: DocumentPart.cpp  DocumentPart.h  Field.h  InnerEnvironment.h  MetaBlock.cpp  OuterEnvironment.cpp  OuterEnvironment.h  Shorthand.cpp  Shorthand.h  Template.cpp  Template.h  TemplateManager.cpp  TemplateManager.h  Wobject.cpp  Wobject.h
wuff/tree-sitter/woowoo/: scanner.cc
wuff/utils/: utils.cpp  utils.h
